// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drawRemainder > last day of Q1 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip"></clipPath>
            <path class="remainder" d="M419.5294805457,19.8749830954L149.8319573377,7.0982082483Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M419.5294805457,19.8749830954L149.8319573377,7.0982082483Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.0909090909" style="font-size: 60px" opacity="0.9" fill="black">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > last day of Q2 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip"></clipPath>
            <path class="remainder" d="M-18.0693378619,419.6111283429L-6.4533349506,149.8611172653Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M-18.0693378619,419.6111283429L-6.4533349506,149.8611172653Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.0909090909" style="font-size: 60px" opacity="0.9" fill="black">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > last day of Q3 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip"></clipPath>
            <path class="remainder" d="M-419.6850047206,-16.2633579747L-149.8875016859,-5.8083421338Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M-419.6850047206,-16.2633579747L-149.8875016859,-5.8083421338Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.0909090909" style="font-size: 60px" opacity="0.9" fill="black">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > last day of Q4 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip"></clipPath>
            <path class="remainder" d="M14.4570768815,-419.7511083106L5.1632417434,-149.9111101109Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M14.4570768815,-419.7511083106L5.1632417434,-149.9111101109Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.0909090909" style="font-size: 60px" opacity="0.9" fill="black">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > start of Q1 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip">
                <path d="M28.8970192569,-419.0047282287A420,420,0,0,1,36.1052154697,-418.4452334725L12.8947198106,-149.4447262401A150,150,0,0,0,10.3203640203,-149.6445457959Z" stroke="none"></path>
                <path d="M36.1052154697,-418.4452334725A420,420,0,0,1,43.3027129279,-417.7617443628L15.4652546171,-149.2006229867A150,150,0,0,0,12.8947198106,-149.4447262401Z" stroke="none"></path>
                <path d="M43.3027129279,-417.7617443628A420,420,0,0,1,50.4873788577,-416.9544634322L18.0312067349,-148.9123083686A150,150,0,0,0,15.4652546171,-149.2006229867Z" stroke="none"></path>
                <path d="M50.4873788577,-416.9544634322A420,420,0,0,1,57.6570842875,-416.0236298955L20.5918158169,-148.5798678198A150,150,0,0,0,18.0312067349,-148.9123083686Z" stroke="none"></path>
                <path d="M57.6570842875,-416.0236298955A420,420,0,0,1,64.8097046789,-414.9695195787L23.1463230996,-148.2033998495A150,150,0,0,0,20.5918158169,-148.5798678198Z" stroke="none"></path>
                <path d="M79.0552181341,-412.4927544645A420,420,0,0,1,86.1438899448,-411.0708335861L30.7656749802,-146.8110119950A150,150,0,0,0,28.2340064764,-147.3188408802Z" stroke="none"></path>
                <path d="M86.1438899448,-411.0708335861A420,420,0,0,1,93.2070354617,-409.5271035480L33.2882269506,-146.2596798385A150,150,0,0,0,30.7656749802,-146.8110119950Z" stroke="none"></path>
                <path d="M93.2070354617,-409.5271035480A420,420,0,0,1,100.2425617224,-407.8620217908L35.8009149008,-145.6650077824A150,150,0,0,0,33.2882269506,-146.2596798385Z" stroke="none"></path>
                <path d="M100.2425617224,-407.8620217908A420,420,0,0,1,107.2483839487,-406.0760817142L38.3029942674,-145.0271720407A150,150,0,0,0,35.8009149008,-145.6650077824Z" stroke="none"></path>
                <path d="M107.2483839487,-406.0760817142A420,420,0,0,1,114.2224261643,-404.1698125307L40.7937236301,-144.3463616181A150,150,0,0,0,38.3029942674,-145.0271720407Z" stroke="none"></path>
                <path d="M128.0669143556,-399.9985818067A420,420,0,0,1,134.9332579107,-397.7348562919L48.1904492538,-142.0481629614A150,150,0,0,0,45.7381836984,-142.8566363595Z" stroke="none"></path>
                <path d="M134.9332579107,-397.7348562919A420,420,0,0,1,141.7596178295,-395.3532733553L50.6284349391,-141.1975976269A150,150,0,0,0,48.1904492538,-142.0481629614Z" stroke="none"></path>
                <path d="M141.7596178295,-395.3532733553A420,420,0,0,1,148.5439713140,-392.8545387115L53.0514183264,-140.3051923969A150,150,0,0,0,50.6284349391,-141.1975976269Z" stroke="none"></path>
                <path d="M148.5439713140,-392.8545387115A420,420,0,0,1,155.2843080140,-390.2393927893L55.4586814336,-139.3712117104A150,150,0,0,0,53.0514183264,-140.3051923969Z" stroke="none"></path>
                <path d="M155.2843080140,-390.2393927893A420,420,0,0,1,161.9786306223,-387.5086105130L57.8495109365,-138.3959323260A150,150,0,0,0,55.4586814336,-139.3712117104Z" stroke="none"></path>
                <path d="M175.2213130971,-381.7034076825A420,420,0,0,1,181.7657488711,-378.6307073353L64.9163388825,-135.2252526197A150,150,0,0,0,62.5790403918,-136.3226456009Z" stroke="none"></path>
                <path d="M181.7657488711,-378.6307073353A420,420,0,0,1,188.2563235309,-375.4458105380L67.2344012610,-134.0877894778A150,150,0,0,0,64.9163388825,-135.2252526197Z" stroke="none"></path>
                <path d="M188.2563235309,-375.4458105380A420,420,0,0,1,194.6911137791,-372.1496610443L69.5325406354,-132.9105932301A150,150,0,0,0,67.2344012610,-134.0877894778Z" stroke="none"></path>
                <path d="M194.6911137791,-372.1496610443A420,420,0,0,1,201.0682128486,-368.7432355743L71.8100760173,-131.6940127051A150,150,0,0,0,69.5325406354,-132.9105932301Z" stroke="none"></path>
                <path d="M201.0682128486,-368.7432355743A420,420,0,0,1,207.3857310671,-365.2275435255L74.0663325239,-130.4384084019A150,150,0,0,0,71.8100760173,-131.6940127051Z" stroke="none"></path>
                <path d="M219.8345550935,-357.8725588625A420,420,0,0,1,225.9621720460,-354.0354456890L80.7007757307,-126.4412306032A150,150,0,0,0,78.5123411048,-127.8116281651Z" stroke="none"></path>
                <path d="M225.9621720460,-354.0354456890A420,420,0,0,1,232.0228315304,-350.0934241721L82.8652969751,-125.0333657757A150,150,0,0,0,80.7007757307,-126.4412306032Z" stroke="none"></path>
                <path d="M232.0228315304,-350.0934241721A420,420,0,0,1,238.0147376422,-346.0476624181L85.0052634436,-123.5884508636A150,150,0,0,0,82.8652969751,-125.0333657757Z" stroke="none"></path>
                <path d="M238.0147376422,-346.0476624181A420,420,0,0,1,243.9361148505,-341.8993592734L87.1200410180,-122.1069140262A150,150,0,0,0,85.0052634436,-123.5884508636Z" stroke="none"></path>
                <path d="M243.9361148505,-341.8993592734A420,420,0,0,1,249.7852085235,-337.6497439697L89.2090030441,-120.5891942749A150,150,0,0,0,87.1200410180,-122.1069140262Z" stroke="none"></path>
                <path d="M261.2596343451,-328.8516435443A420,420,0,0,1,266.8815663738,-324.3057654896L95.3148451335,-115.8234876748A150,150,0,0,0,93.3070122661,-117.4470155515Z" stroke="none"></path>
                <path d="M266.8815663738,-324.3057654896A420,420,0,0,1,272.4244156346,-319.6637886375L97.2944341552,-114.1656387991A150,150,0,0,0,95.3148451335,-115.8234876748Z" stroke="none"></path>
                <path d="M272.4244156346,-319.6637886375A420,420,0,0,1,277.8865396617,-314.9270885059L99.2451927363,-112.4739601806A150,150,0,0,0,97.2944341552,-114.1656387991Z" stroke="none"></path>
                <path d="M277.8865396617,-314.9270885059A420,420,0,0,1,283.2663199098,-310.0970686813L101.1665428249,-110.7489531004A150,150,0,0,0,99.2451927363,-112.4739601806Z" stroke="none"></path>
                <path d="M283.2663199098,-310.0970686813A420,420,0,0,1,288.5621622339,-305.1751604027L103.0579150835,-108.9911287152A150,150,0,0,0,101.1665428249,-110.7489531004Z" stroke="none"></path>
                <path d="M298.8957813583,-295.0615391510A420,420,0,0,1,303.9304960842,-289.8728230620L108.5466057443,-103.5260082364A150,150,0,0,0,106.7484933422,-105.3791211253Z" stroke="none"></path>
                <path d="M303.9304960842,-289.8728230620A420,420,0,0,1,308.8751496448,-284.5982113996L110.3125534445,-101.6422183570A150,150,0,0,0,108.5466057443,-103.5260082364Z" stroke="none"></path>
                <path d="M308.8751496448,-284.5982113996A420,420,0,0,1,313.7282768325,-279.2392671450L112.0458131544,-99.7283096946A150,150,0,0,0,110.3125534445,-101.6422183570Z" stroke="none"></path>
                <path d="M313.7282768325,-279.2392671450A420,420,0,0,1,318.4884395609,-273.7975782690L113.7458712717,-97.7848493818A150,150,0,0,0,112.0458131544,-99.7283096946Z" stroke="none"></path>
                <path d="M318.4884395609,-273.7975782690A420,420,0,0,1,323.1542272912,-268.2747572616L115.4122240325,-95.8124133077A150,150,0,0,0,113.7458712717,-97.7848493818Z" stroke="none"></path>
                <path d="M332.1971758378,-256.9922885328A420,420,0,0,1,336.5716570333,-251.2359840504L120.2041632262,-89.7271371608A150,150,0,0,0,118.6418485135,-91.7829601903Z" stroke="none"></path>
                <path d="M336.5716570333,-251.2359840504A420,420,0,0,1,340.8464047830,-245.4052329239L121.7308588511,-87.6447260442A150,150,0,0,0,120.2041632262,-89.7271371608Z" stroke="none"></path>
                <path d="M340.8464047830,-245.4052329239A420,420,0,0,1,345.0201523870,-239.5017629305L123.2214829953,-85.5363439037A150,150,0,0,0,121.7308588511,-87.6447260442Z" stroke="none"></path>
                <path d="M345.0201523870,-239.5017629305A420,420,0,0,1,349.0916630736,-233.5273233959L124.6755939548,-83.4026154985A150,150,0,0,0,123.2214829953,-85.5363439037Z" stroke="none"></path>
                <path d="M349.0916630736,-233.5273233959A420,420,0,0,1,353.0597303664,-227.4836846755L126.0927608451,-81.2441730983A150,150,0,0,0,124.6755939548,-83.4026154985Z" stroke="none"></path>
                <path d="M360.6808624758,-215.1959930939A420,420,0,0,1,364.3316689864,-208.9555813410L130.1184532094,-74.6269933360A150,150,0,0,0,128.8145937413,-76.8557118192Z" stroke="none"></path>
                <path d="M364.3316689864,-208.9555813410A420,420,0,0,1,367.8745161605,-202.6532515397L131.3837557716,-72.3761612641A150,150,0,0,0,130.1184532094,-74.6269933360Z" stroke="none"></path>
                <path d="M367.8745161605,-202.6532515397A420,420,0,0,1,371.3083541762,-196.2908712063L132.6101264915,-70.1038825737A150,150,0,0,0,131.3837557716,-72.3761612641Z" stroke="none"></path>
                <path d="M371.3083541762,-196.2908712063A420,420,0,0,1,374.6321655130,-189.8703256515L133.7972019689,-67.8108305898A150,150,0,0,0,132.6101264915,-70.1038825737Z" stroke="none"></path>
                <path d="M374.6321655130,-189.8703256515A420,420,0,0,1,377.8449652539,-183.3935174215L134.9446304478,-65.4976847934A150,150,0,0,0,133.7972019689,-67.8108305898Z" stroke="none"></path>
                <path d="M383.9337550378,-170.2788059111A420,420,0,0,1,386.8079408409,-163.6447888029L138.1456931574,-58.4445674296A150,150,0,0,0,137.1191982278,-60.8138592539Z" stroke="none"></path>
                <path d="M386.8079408409,-163.6447888029A420,420,0,0,1,389.5675071032,-156.9622802119L139.1312525368,-56.0579572185A150,150,0,0,0,138.1456931574,-58.4445674296Z" stroke="none"></path>
                <path d="M389.5675071032,-156.9622802119A420,420,0,0,1,392.2116361056,-150.2332603099L140.0755843234,-53.6547358249A150,150,0,0,0,139.1312525368,-56.0579572185Z" stroke="none"></path>
                <path d="M392.2116361056,-150.2332603099A420,420,0,0,1,394.7395443355,-143.4597230504L140.9784086912,-51.2356153751A150,150,0,0,0,140.0755843234,-53.6547358249Z" stroke="none"></path>
                <path d="M394.7395443355,-143.4597230504A420,420,0,0,1,397.1504827193,-136.6436755790L141.8394581140,-48.8013127067A150,150,0,0,0,140.9784086912,-51.2356153751Z" stroke="none"></path>
                <path d="M401.6186271686,-122.8921409660A420,420,0,0,1,403.6745092263,-115.9607287009L144.1694675808,-41.4145459646A150,150,0,0,0,143.4352239887,-43.8900503450Z" stroke="none"></path>
                <path d="M403.6745092263,-115.9607287009A420,420,0,0,1,405.6107738150,-108.9949547693L144.8609906482,-38.9267695604A150,150,0,0,0,144.1694675808,-41.4145459646Z" stroke="none"></path>
                <path d="M405.6107738150,-108.9949547693A420,420,0,0,1,407.4268471776,-101.9968832802L145.5095882777,-36.4274583143A150,150,0,0,0,144.8609906482,-38.9267695604Z" stroke="none"></path>
                <path d="M407.4268471776,-101.9968832802A420,420,0,0,1,409.1221911724,-94.9685879134L146.1150682758,-33.9173528262A150,150,0,0,0,145.5095882777,-36.4274583143Z" stroke="none"></path>
                <path d="M409.1221911724,-94.9685879134A420,420,0,0,1,410.6963034323,-87.9121513044L146.6772512258,-31.3971968944A150,150,0,0,0,146.1150682758,-33.9173528262Z" stroke="none"></path>
                <path d="M413.4790030358,-73.7232259769A420,420,0,0,1,414.6867658054,-66.5949417433L148.1024163590,-23.7839077654A150,150,0,0,0,147.6710725128,-26.3297235632Z" stroke="none"></path>
                <path d="M414.6867658054,-66.5949417433A420,420,0,0,1,415.7716479366,-59.4469239911L148.4898742631,-21.2310442825A150,150,0,0,0,148.1024163590,-23.7839077654Z" stroke="none"></path>
                <path d="M415.7716479366,-59.4469239911A420,420,0,0,1,416.7333279555,-52.2812908324L148.8333314126,-18.6718895830A150,150,0,0,0,148.4898742631,-21.2310442825Z" stroke="none"></path>
                <path d="M416.7333279555,-52.2812908324A420,420,0,0,1,417.5715208954,-45.1001655989L149.1326860340,-16.1072019996A150,150,0,0,0,148.8333314126,-18.6718895830Z" stroke="none"></path>
                <path d="M417.5715208954,-45.1001655989A420,420,0,0,1,418.2859783818,-37.9056762130L149.3878494220,-13.5377415046A150,150,0,0,0,149.1326860340,-16.1072019996Z" stroke="none"></path>
            </clipPath>
            <path class="remainder" d="M21.6802602337,-419.4400628411A420,420,0,0,1,418.8764887054,-30.6999545571L149.5987459662,-10.9642694847A150,150,0,0,0,7.7429500834,-149.8000224432Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M21.6802602337,-419.4400628411A420,420,0,0,1,418.8764887054,-30.6999545571L149.5987459662,-10.9642694847A150,150,0,0,0,7.7429500834,-149.8000224432Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.0909090909" style="font-size: 60px" opacity="0.9" fill="black">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > start of Q2 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip">
                <path d="M419.1252075634,27.0935487687A420,420,0,0,1,418.5967387367,34.3040860387L149.4988352631,12.2514592995A150,150,0,0,0,149.6875741298,9.6762674173Z" stroke="none"></path>
                <path d="M418.5967387367,34.3040860387A420,420,0,0,1,417.9442306622,41.5044582678L149.2657966651,14.8230208099A150,150,0,0,0,149.4988352631,12.2514592995Z" stroke="none"></path>
                <path d="M417.9442306622,41.5044582678A420,420,0,0,1,417.1678766923,48.6925318301L148.9885273901,17.3901899393A150,150,0,0,0,149.2657966651,14.8230208099Z" stroke="none"></path>
                <path d="M417.1678766923,48.6925318301A420,420,0,0,1,416.2679068772,55.8661767443L148.6671095990,19.9522059801A150,150,0,0,0,148.9885273901,17.3901899393Z" stroke="none"></path>
                <path d="M416.2679068772,55.8661767443A420,420,0,0,1,415.2445878975,63.0232673047L148.3016385348,22.5083097516A150,150,0,0,0,148.6671095990,19.9522059801Z" stroke="none"></path>
                <path d="M412.8291518315,77.2793076962A420,420,0,0,1,411.4377504911,84.3740331548L146.9420537468,30.1335832695A150,150,0,0,0,147.4389827969,27.5997527486Z" stroke="none"></path>
                <path d="M411.4377504911,84.3740331548A420,420,0,0,1,409.9244312655,91.4437567665L146.4015825948,32.6584845594A150,150,0,0,0,146.9420537468,30.1335832695Z" stroke="none"></path>
                <path d="M409.9244312655,91.4437567665A420,420,0,0,1,408.2896425842,98.4863836195L145.8177294943,35.1737084355A150,150,0,0,0,146.4015825948,32.6584845594Z" stroke="none"></path>
                <path d="M408.2896425842,98.4863836195A420,420,0,0,1,406.5338688701,105.4998268316L145.1906674536,37.6785095827A150,150,0,0,0,145.8177294943,35.1737084355Z" stroke="none"></path>
                <path d="M406.5338688701,105.4998268316A420,420,0,0,1,404.6576303969,112.4820081681L144.5205822846,40.1721457743A150,150,0,0,0,145.1906674536,37.6785095827Z" stroke="none"></path>
                <path d="M400.5460185847,126.3443192069A420,420,0,0,1,398.3118636051,133.2203412074L142.2542370018,47.5786932883A150,150,0,0,0,143.0521494945,45.1229711453Z" stroke="none"></path>
                <path d="M398.3118636051,133.2203412074A420,420,0,0,1,395.9596802239,140.0568871456L141.4141715085,50.0203168377A150,150,0,0,0,142.2542370018,47.5786932883Z" stroke="none"></path>
                <path d="M395.9596802239,140.0568871456A420,420,0,0,1,393.4901654440,146.8519312055L140.5322019443,52.4471182876A150,150,0,0,0,141.4141715085,50.0203168377Z" stroke="none"></path>
                <path d="M393.4901654440,146.8519312055A420,420,0,0,1,390.9040510359,153.6034598688L139.6085896556,54.8583785245A150,150,0,0,0,140.5322019443,52.4471182876Z" stroke="none"></path>
                <path d="M390.9040510359,153.6034598688A420,420,0,0,1,388.2021033210,160.3094725119L138.6436083289,57.2533830399A150,150,0,0,0,139.6085896556,54.8583785245Z" stroke="none"></path>
                <path d="M382.4539446395,173.5770152688A420,420,0,0,1,379.4094369763,180.1346139232L135.5033703487,64.3337906868A150,150,0,0,0,136.5906945141,61.9917911674Z" stroke="none"></path>
                <path d="M379.4094369763,180.1346139232A420,420,0,0,1,376.2525021086,186.6388348039L134.3758936102,66.6567267156A150,150,0,0,0,135.5033703487,64.3337906868Z" stroke="none"></path>
                <path d="M376.2525021086,186.6388348039A420,420,0,0,1,372.9840755043,193.0877505698L133.2085983944,68.9599109178A150,150,0,0,0,134.3758936102,66.6567267156Z" stroke="none"></path>
                <path d="M372.9840755043,193.0877505698A420,420,0,0,1,369.6051256688,199.4794502681L132.0018305960,71.2426608100A150,150,0,0,0,133.2085983944,68.9599109178Z" stroke="none"></path>
                <path d="M369.6051256688,199.4794502681A420,420,0,0,1,366.1166538579,205.8120399002L130.7559478063,73.5042999643A150,150,0,0,0,132.0018305960,71.2426608100Z" stroke="none"></path>
                <path d="M358.8153112949,218.2924011053A420,420,0,0,1,355.0046040882,224.4364744780L126.7873586029,80.1558837421A150,150,0,0,0,128.1483254624,77.9615718233Z" stroke="none"></path>
                <path d="M355.0046040882,224.4364744780A420,420,0,0,1,351.0887013558,230.5140424795L125.3888219127,82.3264437427A150,150,0,0,0,126.7873586029,80.1558837421Z" stroke="none"></path>
                <path d="M351.0887013558,230.5140424795A420,420,0,0,1,347.0687634640,236.5233041954L123.9531298085,84.4726086412A150,150,0,0,0,125.3888219127,82.3264437427Z" stroke="none"></path>
                <path d="M347.0687634640,236.5233041954A420,420,0,0,1,342.9459816072,242.4624789517L122.4807077168,86.5937424827A150,150,0,0,0,123.9531298085,84.4726086412Z" stroke="none"></path>
                <path d="M342.9459816072,242.4624789517A420,420,0,0,1,338.7215774547,248.3298068427L120.9719919481,88.6892167295A150,150,0,0,0,122.4807077168,86.5937424827Z" stroke="none"></path>
                <path d="M329.9729391330,259.8419893702A420,420,0,0,1,325.4512973741,265.4834326986L116.2326062050,94.8155116781A150,150,0,0,0,117.8474782618,92.8007104893Z" stroke="none"></path>
                <path d="M325.4512973741,265.4834326986A420,420,0,0,1,320.8332173720,271.0462075564L114.5832919185,96.8022169844A150,150,0,0,0,116.2326062050,94.8155116781Z" stroke="none"></path>
                <path d="M320.8332173720,271.0462075564A420,420,0,0,1,316.1200675634,276.5286655731L112.9000241298,98.7602377047A150,150,0,0,0,114.5832919185,96.8022169844Z" stroke="none"></path>
                <path d="M316.1200675634,276.5286655731A420,420,0,0,1,311.3132445564,281.9291821783L111.1833016272,100.6889936351A150,150,0,0,0,112.9000241298,98.7602377047Z" stroke="none"></path>
                <path d="M311.3132445564,281.9291821783A420,420,0,0,1,306.4141727163,287.2461570823L109.4336331129,102.5879132436A150,150,0,0,0,111.1833016272,100.6889936351Z" stroke="none"></path>
                <path d="M296.3451162450,297.6232048710A420,420,0,0,1,291.1781152925,302.6802028126L103.9921840330,108.1000724330A150,150,0,0,0,105.8375415160,106.2940017396Z" stroke="none"></path>
                <path d="M291.1781152925,302.6802028126A420,420,0,0,1,285.9248319803,307.6475100777L102.1160114215,109.8741107420A150,150,0,0,0,103.9921840330,108.1000724330Z" stroke="none"></path>
                <path d="M285.9248319803,307.6475100777A420,420,0,0,1,280.5868229696,312.5236547459L100.2095796320,111.6155909807A150,150,0,0,0,102.1160114215,109.8741107420Z" stroke="none"></path>
                <path d="M280.5868229696,312.5236547459A420,420,0,0,1,275.1656700278,317.3071919105L98.2734535813,113.3239971109A150,150,0,0,0,100.2095796320,111.6155909807Z" stroke="none"></path>
                <path d="M275.1656700278,317.3071919105A420,420,0,0,1,269.6629795593,321.9967041060L96.3082069854,114.9988228950A150,150,0,0,0,98.2734535813,113.3239971109Z" stroke="none"></path>
                <path d="M258.4195319845,331.0881234488A420,420,0,0,1,252.6821065544,335.4873366122L90.2436094837,119.8169059329A150,150,0,0,0,92.2926899944,118.2457583745Z" stroke="none"></path>
                <path d="M252.6821065544,335.4873366122A420,420,0,0,1,246.8698059628,339.7871376374L88.1677878438,121.3525491562A150,150,0,0,0,90.2436094837,119.8169059329Z" stroke="none"></path>
                <path d="M246.8698059628,339.7871376374A420,420,0,0,1,240.9843525198,343.9862524005L86.0658401856,122.8522330002A150,150,0,0,0,88.1677878438,121.3525491562Z" stroke="none"></path>
                <path d="M240.9843525198,343.9862524005A420,420,0,0,1,235.0274902122,348.0834366132L83.9383893615,124.3155130761A150,150,0,0,0,86.0658401856,122.8522330002Z" stroke="none"></path>
                <path d="M235.0274902122,348.0834366132A420,420,0,0,1,229.0009841870,352.0774761914L81.7860657810,125.7419557826A150,150,0,0,0,83.9383893615,124.3155130761Z" stroke="none"></path>
                <path d="M216.7462042266,359.7514182784A420,420,0,0,1,210.5215616472,363.4290468325L75.1862720168,129.7960881544A150,150,0,0,0,77.4093586523,128.4826493851Z" stroke="none"></path>
                <path d="M210.5215616472,363.4290468325A420,420,0,0,1,204.2345369856,366.9989835166L72.9409060663,131.0710655416A150,150,0,0,0,75.1862720168,129.7960881544Z" stroke="none"></path>
                <path d="M204.2345369856,366.9989835166A420,420,0,0,1,197.8869932230,370.4601704814L70.6739261510,132.3072037433A150,150,0,0,0,72.9409060663,131.0710655416Z" stroke="none"></path>
                <path d="M197.8869932230,370.4601704814A420,420,0,0,1,191.4808112735,373.8115821025L68.3860040262,133.5041364652A150,150,0,0,0,70.6739261510,132.3072037433Z" stroke="none"></path>
                <path d="M191.4808112735,373.8115821025A420,420,0,0,1,185.0178894272,377.0522252843L66.0778176525,134.6615090301A150,150,0,0,0,68.3860040262,133.5041364652Z" stroke="none"></path>
                <path d="M171.9295027025,383.1973983477A420,420,0,0,1,165.3079161957,386.1001072818L59.0385414984,137.8928954577A150,150,0,0,0,61.4033938223,136.8562136956Z" stroke="none"></path>
                <path d="M165.3079161957,386.1001072818A420,420,0,0,1,158.6373453856,388.8884064214L56.6561947805,138.8887165790A150,150,0,0,0,59.0385414984,137.8928954577Z" stroke="none"></path>
                <path d="M158.6373453856,388.8884064214A420,420,0,0,1,151.9197669065,391.5614695332L54.2570596094,139.8433819761A150,150,0,0,0,56.6561947805,138.8887165790Z" stroke="none"></path>
                <path d="M151.9197669065,391.5614695332A420,420,0,0,1,145.1571713217,394.1185045311L51.8418469006,140.7566087611A150,150,0,0,0,54.2570596094,139.8433819761Z" stroke="none"></path>
                <path d="M145.1571713217,394.1185045311A420,420,0,0,1,138.3515625343,396.5587537103L49.4112723336,141.6281263251A150,150,0,0,0,51.8418469006,140.7566087611Z" stroke="none"></path>
                <path d="M124.6193840948,401.0860370392A420,420,0,0,1,117.6968835836,403.1717296570L42.0346012798,143.9899034489A150,150,0,0,0,44.5069228910,143.2450132282Z" stroke="none"></path>
                <path d="M117.6968835836,403.1717296570A420,420,0,0,1,110.7395069457,405.1379537903L39.5498239092,144.6921263536A150,150,0,0,0,42.0346012798,143.9899034489Z" stroke="none"></path>
                <path d="M110.7395069457,405.1379537903A420,420,0,0,1,103.7493158019,406.9841268042L37.0533270721,145.3514738586A150,150,0,0,0,39.5498239092,144.6921263536Z" stroke="none"></path>
                <path d="M103.7493158019,406.9841268042A420,420,0,0,1,96.7283814968,408.7097016379L34.5458505345,145.9677505849A150,150,0,0,0,37.0533270721,145.3514738586Z" stroke="none"></path>
                <path d="M96.7283814968,408.7097016379A420,420,0,0,1,89.6787844847,410.3141669664L32.0281373159,146.5407739165A150,150,0,0,0,34.5458505345,145.9677505849Z" stroke="none"></path>
                <path d="M75.5019660047,413.1579033849A420,420,0,0,1,68.3789454341,414.3963318144L24.4210519407,147.9986899337A150,150,0,0,0,26.9649878588,147.5563940660Z" stroke="none"></path>
                <path d="M68.3789454341,414.3963318144A420,420,0,0,1,61.2356627063,415.5119656675L21.8698795379,148.3971305955A150,150,0,0,0,24.4210519407,147.9986899337Z" stroke="none"></path>
                <path d="M61.2356627063,415.5119656675A420,420,0,0,1,54.0742345300,416.5044743577L19.3122266178,148.7515979848A150,150,0,0,0,21.8698795379,148.3971305955Z" stroke="none"></path>
                <path d="M54.0742345300,416.5044743577A420,420,0,0,1,46.8967829911,417.3735637831L16.7488510682,149.0619870654A150,150,0,0,0,19.3122266178,148.7515979848Z" stroke="none"></path>
                <path d="M46.8967829911,417.3735637831A420,420,0,0,1,39.7054349232,418.1189764140L14.1805124725,149.3282058621A150,150,0,0,0,16.7488510682,149.0619870654Z" stroke="none"></path>
            </clipPath>
            <path class="remainder" d="M419.5294805457,19.8749830954A420,420,0,0,1,32.5023212780,418.7404913685L11.6079718850,149.5501754887A150,150,0,0,0,149.8319573377,7.0982082483Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M419.5294805457,19.8749830954A420,420,0,0,1,32.5023212780,418.7404913685L11.6079718850,149.5501754887A150,150,0,0,0,149.8319573377,7.0982082483Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.0909090909" style="font-size: 60px" opacity="0.9" fill="black">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > start of Q3 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip">
                <path d="M-25.2895764936,419.2379244781A420,420,0,0,1,-32.5023212780,418.7404913685L-11.6079718850,149.5501754887A150,150,0,0,0,-9.0319916048,149.7278301707Z" stroke="none"></path>
                <path d="M-32.5023212780,418.7404913685A420,420,0,0,1,-39.7054349232,418.1189764140L-14.1805124725,149.3282058621A150,150,0,0,0,-11.6079718850,149.5501754887Z" stroke="none"></path>
                <path d="M-39.7054349232,418.1189764140A420,420,0,0,1,-46.8967829911,417.3735637831L-16.7488510682,149.0619870654A150,150,0,0,0,-14.1805124725,149.3282058621Z" stroke="none"></path>
                <path d="M-46.8967829911,417.3735637831A420,420,0,0,1,-54.0742345300,416.5044743577L-19.3122266178,148.7515979848A150,150,0,0,0,-16.7488510682,149.0619870654Z" stroke="none"></path>
                <path d="M-54.0742345300,416.5044743577A420,420,0,0,1,-61.2356627063,415.5119656675L-21.8698795379,148.3971305955A150,150,0,0,0,-19.3122266178,148.7515979848Z" stroke="none"></path>
                <path d="M-75.5019660047,413.1579033849A420,420,0,0,1,-82.6026137133,411.7970473518L-29.5009334690,147.0703740542A150,150,0,0,0,-26.9649878588,147.5563940660Z" stroke="none"></path>
                <path d="M-82.6026137133,411.7970473518A420,420,0,0,1,-89.6787844847,410.3141669664L-32.0281373159,146.5407739165A150,150,0,0,0,-29.5009334690,147.0703740542Z" stroke="none"></path>
                <path d="M-89.6787844847,410.3141669664A420,420,0,0,1,-96.7283814968,408.7097016379L-34.5458505345,145.9677505849A150,150,0,0,0,-32.0281373159,146.5407739165Z" stroke="none"></path>
                <path d="M-96.7283814968,408.7097016379A420,420,0,0,1,-103.7493158019,406.9841268042L-37.0533270721,145.3514738586A150,150,0,0,0,-34.5458505345,145.9677505849Z" stroke="none"></path>
                <path d="M-103.7493158019,406.9841268042A420,420,0,0,1,-110.7395069457,405.1379537903L-39.5498239092,144.6921263536A150,150,0,0,0,-37.0533270721,145.3514738586Z" stroke="none"></path>
                <path d="M-124.6193840948,401.0860370392A420,420,0,0,1,-131.5049571930,398.8814939724L-46.9660561403,142.4576764187A150,150,0,0,0,-44.5069228910,143.2450132282Z" stroke="none"></path>
                <path d="M-131.5049571930,398.8814939724A420,420,0,0,1,-138.3515625343,396.5587537103L-49.4112723336,141.6281263251A150,150,0,0,0,-46.9660561403,142.4576764187Z" stroke="none"></path>
                <path d="M-138.3515625343,396.5587537103A420,420,0,0,1,-145.1571713217,394.1185045311L-51.8418469006,140.7566087611A150,150,0,0,0,-49.4112723336,141.6281263251Z" stroke="none"></path>
                <path d="M-145.1571713217,394.1185045311A420,420,0,0,1,-151.9197669065,391.5614695332L-54.2570596094,139.8433819761A150,150,0,0,0,-51.8418469006,140.7566087611Z" stroke="none"></path>
                <path d="M-151.9197669065,391.5614695332A420,420,0,0,1,-158.6373453856,388.8884064214L-56.6561947805,138.8887165790A150,150,0,0,0,-54.2570596094,139.8433819761Z" stroke="none"></path>
                <path d="M-171.9295027025,383.1973983477A420,420,0,0,1,-178.5001427872,380.1811397543L-63.7500509954,135.7789784837A150,150,0,0,0,-61.4033938223,136.8562136956Z" stroke="none"></path>
                <path d="M-178.5001427872,380.1811397543A420,420,0,0,1,-185.0178894272,377.0522252843L-66.0778176525,134.6615090301A150,150,0,0,0,-63.7500509954,135.7789784837Z" stroke="none"></path>
                <path d="M-185.0178894272,377.0522252843A420,420,0,0,1,-191.4808112735,373.8115821025L-68.3860040262,133.5041364652A150,150,0,0,0,-66.0778176525,134.6615090301Z" stroke="none"></path>
                <path d="M-191.4808112735,373.8115821025A420,420,0,0,1,-197.8869932230,370.4601704814L-70.6739261510,132.3072037433A150,150,0,0,0,-68.3860040262,133.5041364652Z" stroke="none"></path>
                <path d="M-197.8869932230,370.4601704814A420,420,0,0,1,-204.2345369856,366.9989835166L-72.9409060663,131.0710655416A150,150,0,0,0,-70.6739261510,132.3072037433Z" stroke="none"></path>
                <path d="M-216.7462042266,359.7514182784A420,420,0,0,1,-222.9066202280,355.9671876149L-79.6095072242,127.1311384339A150,150,0,0,0,-77.4093586523,128.4826493851Z" stroke="none"></path>
                <path d="M-222.9066202280,355.9671876149A420,420,0,0,1,-229.0009841870,352.0774761914L-81.7860657810,125.7419557826A150,150,0,0,0,-79.6095072242,127.1311384339Z" stroke="none"></path>
                <path d="M-229.0009841870,352.0774761914A420,420,0,0,1,-235.0274902122,348.0834366132L-83.9383893615,124.3155130761A150,150,0,0,0,-81.7860657810,125.7419557826Z" stroke="none"></path>
                <path d="M-235.0274902122,348.0834366132A420,420,0,0,1,-240.9843525198,343.9862524005L-86.0658401856,122.8522330002A150,150,0,0,0,-83.9383893615,124.3155130761Z" stroke="none"></path>
                <path d="M-240.9843525198,343.9862524005A420,420,0,0,1,-246.8698059628,339.7871376374L-88.1677878438,121.3525491562A150,150,0,0,0,-86.0658401856,122.8522330002Z" stroke="none"></path>
                <path d="M-258.4195319845,331.0881234488A420,420,0,0,1,-264.0803821302,326.5908017289L-94.3144221893,116.6395720460A150,150,0,0,0,-92.2926899944,118.2457583745Z" stroke="none"></path>
                <path d="M-264.0803821302,326.5908017289A420,420,0,0,1,-269.6629795593,321.9967041060L-96.3082069854,114.9988228950A150,150,0,0,0,-94.3144221893,116.6395720460Z" stroke="none"></path>
                <path d="M-269.6629795593,321.9967041060A420,420,0,0,1,-275.1656700278,317.3071919105L-98.2734535813,113.3239971109A150,150,0,0,0,-96.3082069854,114.9988228950Z" stroke="none"></path>
                <path d="M-275.1656700278,317.3071919105A420,420,0,0,1,-280.5868229696,312.5236547459L-100.2095796320,111.6155909807A150,150,0,0,0,-98.2734535813,113.3239971109Z" stroke="none"></path>
                <path d="M-280.5868229696,312.5236547459A420,420,0,0,1,-285.9248319803,307.6475100777L-102.1160114215,109.8741107420A150,150,0,0,0,-100.2095796320,111.6155909807Z" stroke="none"></path>
                <path d="M-296.3451162450,297.6232048710A420,420,0,0,1,-301.4243037439,292.4780147506L-107.6515370513,104.4564338395A150,150,0,0,0,-105.8375415160,106.2940017396Z" stroke="none"></path>
                <path d="M-301.4243037439,292.4780147506A420,420,0,0,1,-306.4141727163,287.2461570823L-109.4336331129,102.5879132436A150,150,0,0,0,-107.6515370513,104.4564338395Z" stroke="none"></path>
                <path d="M-306.4141727163,287.2461570823A420,420,0,0,1,-311.3132445564,281.9291821783L-111.1833016272,100.6889936351A150,150,0,0,0,-109.4336331129,102.5879132436Z" stroke="none"></path>
                <path d="M-311.3132445564,281.9291821783A420,420,0,0,1,-316.1200675634,276.5286655731L-112.9000241298,98.7602377047A150,150,0,0,0,-111.1833016272,100.6889936351Z" stroke="none"></path>
                <path d="M-316.1200675634,276.5286655731A420,420,0,0,1,-320.8332173720,271.0462075564L-114.5832919185,96.8022169844A150,150,0,0,0,-112.9000241298,98.7602377047Z" stroke="none"></path>
                <path d="M-329.9729391330,259.8419893702A420,420,0,0,1,-334.3968027886,254.1235492525L-119.4274295673,90.7584104473A150,150,0,0,0,-117.8474782618,92.8007104893Z" stroke="none"></path>
                <path d="M-334.3968027886,254.1235492525A420,420,0,0,1,-338.7215774547,248.3298068427L-120.9719919481,88.6892167295A150,150,0,0,0,-119.4274295673,90.7584104473Z" stroke="none"></path>
                <path d="M-338.7215774547,248.3298068427A420,420,0,0,1,-342.9459816072,242.4624789517L-122.4807077168,86.5937424827A150,150,0,0,0,-120.9719919481,88.6892167295Z" stroke="none"></path>
                <path d="M-342.9459816072,242.4624789517A420,420,0,0,1,-347.0687634640,236.5233041954L-123.9531298085,84.4726086412A150,150,0,0,0,-122.4807077168,86.5937424827Z" stroke="none"></path>
                <path d="M-347.0687634640,236.5233041954A420,420,0,0,1,-351.0887013558,230.5140424795L-125.3888219127,82.3264437427A150,150,0,0,0,-123.9531298085,84.4726086412Z" stroke="none"></path>
                <path d="M-358.8153112949,218.2924011053A420,420,0,0,1,-362.5196937809,212.0836429830L-129.4713192074,75.7441582082A150,150,0,0,0,-128.1483254624,77.9615718233Z" stroke="none"></path>
                <path d="M-362.5196937809,212.0836429830A420,420,0,0,1,-366.1166538579,205.8120399002L-130.7559478063,73.5042999643A150,150,0,0,0,-129.4713192074,75.7441582082Z" stroke="none"></path>
                <path d="M-366.1166538579,205.8120399002A420,420,0,0,1,-369.6051256688,199.4794502681L-132.0018305960,71.2426608100A150,150,0,0,0,-130.7559478063,73.5042999643Z" stroke="none"></path>
                <path d="M-369.6051256688,199.4794502681A420,420,0,0,1,-372.9840755043,193.0877505698L-133.2085983944,68.9599109178A150,150,0,0,0,-132.0018305960,71.2426608100Z" stroke="none"></path>
                <path d="M-372.9840755043,193.0877505698A420,420,0,0,1,-376.2525021086,186.6388348039L-134.3758936102,66.6567267156A150,150,0,0,0,-133.2085983944,68.9599109178Z" stroke="none"></path>
                <path d="M-382.4539446395,173.5770152688A420,420,0,0,1,-385.3851229449,166.9679819986L-137.6375439089,59.6314221423A150,150,0,0,0,-136.5906945141,61.9917911674Z" stroke="none"></path>
                <path d="M-385.3851229449,166.9679819986A420,420,0,0,1,-388.2021033210,160.3094725119L-138.6436083289,57.2533830399A150,150,0,0,0,-137.6375439089,59.6314221423Z" stroke="none"></path>
                <path d="M-388.2021033210,160.3094725119A420,420,0,0,1,-390.9040510359,153.6034598688L-139.6085896556,54.8583785245A150,150,0,0,0,-138.6436083289,57.2533830399Z" stroke="none"></path>
                <path d="M-390.9040510359,153.6034598688A420,420,0,0,1,-393.4901654440,146.8519312055L-140.5322019443,52.4471182876A150,150,0,0,0,-139.6085896556,54.8583785245Z" stroke="none"></path>
                <path d="M-393.4901654440,146.8519312055A420,420,0,0,1,-395.9596802239,140.0568871456L-141.4141715085,50.0203168377A150,150,0,0,0,-140.5322019443,52.4471182876Z" stroke="none"></path>
                <path d="M-400.5460185847,126.3443192069A420,420,0,0,1,-402.6614831346,119.4308586580L-143.8076725480,42.6538780921A150,150,0,0,0,-143.0521494945,45.1229711453Z" stroke="none"></path>
                <path d="M-402.6614831346,119.4308586580A420,420,0,0,1,-404.6576303969,112.4820081681L-144.5205822846,40.1721457743A150,150,0,0,0,-143.8076725480,42.6538780921Z" stroke="none"></path>
                <path d="M-404.6576303969,112.4820081681A420,420,0,0,1,-406.5338688701,105.4998268316L-145.1906674536,37.6785095827A150,150,0,0,0,-144.5205822846,40.1721457743Z" stroke="none"></path>
                <path d="M-406.5338688701,105.4998268316A420,420,0,0,1,-408.2896425842,98.4863836195L-145.8177294943,35.1737084355A150,150,0,0,0,-145.1906674536,37.6785095827Z" stroke="none"></path>
                <path d="M-408.2896425842,98.4863836195A420,420,0,0,1,-409.9244312655,91.4437567665L-146.4015825948,32.6584845594A150,150,0,0,0,-145.8177294943,35.1737084355Z" stroke="none"></path>
                <path d="M-412.8291518315,77.2793076962A420,420,0,0,1,-414.0982229848,70.1616827108L-147.8922224945,25.0577438253A150,150,0,0,0,-147.4389827969,27.5997527486Z" stroke="none"></path>
                <path d="M-414.0982229848,70.1616827108A420,420,0,0,1,-415.2445878975,63.0232673047L-148.3016385348,22.5083097516A150,150,0,0,0,-147.8922224945,25.0577438253Z" stroke="none"></path>
                <path d="M-415.2445878975,63.0232673047A420,420,0,0,1,-416.2679068772,55.8661767443L-148.6671095990,19.9522059801A150,150,0,0,0,-148.3016385348,22.5083097516Z" stroke="none"></path>
                <path d="M-416.2679068772,55.8661767443A420,420,0,0,1,-417.1678766923,48.6925318301L-148.9885273901,17.3901899393A150,150,0,0,0,-148.6671095990,19.9522059801Z" stroke="none"></path>
                <path d="M-417.1678766923,48.6925318301A420,420,0,0,1,-417.9442306622,41.5044582678L-149.2657966651,14.8230208099A150,150,0,0,0,-148.9885273901,17.3901899393Z" stroke="none"></path>
            </clipPath>
            <path class="remainder" d="M-18.0693378619,419.6111283429A420,420,0,0,1,-418.5967387367,34.3040860387L-149.4988352631,12.2514592995A150,150,0,0,0,-6.4533349506,149.8611172653Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M-18.0693378619,419.6111283429A420,420,0,0,1,-418.5967387367,34.3040860387L-149.4988352631,12.2514592995A150,150,0,0,0,-6.4533349506,149.8611172653Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.0909090909" style="font-size: 60px" opacity="0.9" fill="black">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > start of Q4 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip">
                <path d="M-419.3428768853,-23.4851358422A420,420,0,0,1,-418.8764887054,-30.6999545571L-149.5987459662,-10.9642694847A150,150,0,0,0,-149.7653131733,-8.3875485150Z" stroke="none"></path>
                <path d="M-418.8764887054,-30.6999545571A420,420,0,0,1,-418.2859783818,-37.9056762130L-149.3878494220,-13.5377415046A150,150,0,0,0,-149.5987459662,-10.9642694847Z" stroke="none"></path>
                <path d="M-418.2859783818,-37.9056762130A420,420,0,0,1,-417.5715208954,-45.1001655989L-149.1326860340,-16.1072019996A150,150,0,0,0,-149.3878494220,-13.5377415046Z" stroke="none"></path>
                <path d="M-417.5715208954,-45.1001655989A420,420,0,0,1,-416.7333279555,-52.2812908324L-148.8333314126,-18.6718895830A150,150,0,0,0,-149.1326860340,-16.1072019996Z" stroke="none"></path>
                <path d="M-416.7333279555,-52.2812908324A420,420,0,0,1,-415.7716479366,-59.4469239911L-148.4898742631,-21.2310442825A150,150,0,0,0,-148.8333314126,-18.6718895830Z" stroke="none"></path>
                <path d="M-413.4790030358,-73.7232259769A420,420,0,0,1,-412.1487175140,-80.8296644277L-147.1959705407,-28.8677372956A150,150,0,0,0,-147.6710725128,-26.3297235632Z" stroke="none"></path>
                <path d="M-412.1487175140,-80.8296644277A420,420,0,0,1,-410.6963034323,-87.9121513044L-146.6772512258,-31.3971968944A150,150,0,0,0,-147.1959705407,-28.8677372956Z" stroke="none"></path>
                <path d="M-410.6963034323,-87.9121513044A420,420,0,0,1,-409.1221911724,-94.9685879134L-146.1150682758,-33.9173528262A150,150,0,0,0,-146.6772512258,-31.3971968944Z" stroke="none"></path>
                <path d="M-409.1221911724,-94.9685879134A420,420,0,0,1,-407.4268471776,-101.9968832802L-145.5095882777,-36.4274583143A150,150,0,0,0,-146.1150682758,-33.9173528262Z" stroke="none"></path>
                <path d="M-407.4268471776,-101.9968832802A420,420,0,0,1,-405.6107738150,-108.9949547693L-144.8609906482,-38.9267695604A150,150,0,0,0,-145.5095882777,-36.4274583143Z" stroke="none"></path>
                <path d="M-401.6186271686,-122.8921409660A420,420,0,0,1,-399.4437368439,-129.7871376374L-142.6584774442,-46.3525491562A150,150,0,0,0,-143.4352239887,-43.8900503450Z" stroke="none"></path>
                <path d="M-399.4437368439,-129.7871376374A420,420,0,0,1,-397.1504827193,-136.6436755790L-141.8394581140,-48.8013127067A150,150,0,0,0,-142.6584774442,-46.3525491562Z" stroke="none"></path>
                <path d="M-397.1504827193,-136.6436755790A420,420,0,0,1,-394.7395443355,-143.4597230504L-140.9784086912,-51.2356153751A150,150,0,0,0,-141.8394581140,-48.8013127067Z" stroke="none"></path>
                <path d="M-394.7395443355,-143.4597230504A420,420,0,0,1,-392.2116361056,-150.2332603099L-140.0755843234,-53.6547358249A150,150,0,0,0,-140.9784086912,-51.2356153751Z" stroke="none"></path>
                <path d="M-392.2116361056,-150.2332603099A420,420,0,0,1,-389.5675071032,-156.9622802119L-139.1312525368,-56.0579572185A150,150,0,0,0,-140.0755843234,-53.6547358249Z" stroke="none"></path>
                <path d="M-383.9337550378,-170.2788059111A420,420,0,0,1,-380.9458013771,-176.8623657343L-136.0520719203,-63.1651306194A150,150,0,0,0,-137.1191982278,-60.8138592539Z" stroke="none"></path>
                <path d="M-380.9458013771,-176.8623657343A420,420,0,0,1,-377.8449652539,-183.3935174215L-134.9446304478,-65.4976847934A150,150,0,0,0,-136.0520719203,-63.1651306194Z" stroke="none"></path>
                <path d="M-377.8449652539,-183.3935174215A420,420,0,0,1,-374.6321655130,-189.8703256515L-133.7972019689,-67.8108305898A150,150,0,0,0,-134.9446304478,-65.4976847934Z" stroke="none"></path>
                <path d="M-374.6321655130,-189.8703256515A420,420,0,0,1,-371.3083541762,-196.2908712063L-132.6101264915,-70.1038825737A150,150,0,0,0,-133.7972019689,-67.8108305898Z" stroke="none"></path>
                <path d="M-371.3083541762,-196.2908712063A420,420,0,0,1,-367.8745161605,-202.6532515397L-131.3837557716,-72.3761612641A150,150,0,0,0,-132.6101264915,-70.1038825737Z" stroke="none"></path>
                <path d="M-360.6808624758,-215.1959930939A420,420,0,0,1,-356.9231784415,-221.3726376297L-127.4725637291,-79.0616562963A150,150,0,0,0,-128.8145937413,-76.8557118192Z" stroke="none"></path>
                <path d="M-356.9231784415,-221.3726376297A420,420,0,0,1,-353.0597303664,-227.4836846755L-126.0927608451,-81.2441730983A150,150,0,0,0,-127.4725637291,-79.0616562963Z" stroke="none"></path>
                <path d="M-353.0597303664,-227.4836846755A420,420,0,0,1,-349.0916630736,-233.5273233959L-124.6755939548,-83.4026154985A150,150,0,0,0,-126.0927608451,-81.2441730983Z" stroke="none"></path>
                <path d="M-349.0916630736,-233.5273233959A420,420,0,0,1,-345.0201523870,-239.5017629305L-123.2214829953,-85.5363439037A150,150,0,0,0,-124.6755939548,-83.4026154985Z" stroke="none"></path>
                <path d="M-345.0201523870,-239.5017629305A420,420,0,0,1,-340.8464047830,-245.4052329239L-121.7308588511,-87.6447260442A150,150,0,0,0,-123.2214829953,-85.5363439037Z" stroke="none"></path>
                <path d="M-332.1971758378,-256.9922885328A420,420,0,0,1,-327.7242574497,-262.6724406538L-117.0443776606,-93.8115859477A150,150,0,0,0,-118.6418485135,-91.7829601903Z" stroke="none"></path>
                <path d="M-327.7242574497,-262.6724406538A420,420,0,0,1,-323.1542272912,-268.2747572616L-115.4122240325,-95.8124133077A150,150,0,0,0,-117.0443776606,-93.8115859477Z" stroke="none"></path>
                <path d="M-323.1542272912,-268.2747572616A420,420,0,0,1,-318.4884395609,-273.7975782690L-113.7458712717,-97.7848493818A150,150,0,0,0,-115.4122240325,-95.8124133077Z" stroke="none"></path>
                <path d="M-318.4884395609,-273.7975782690A420,420,0,0,1,-313.7282768325,-279.2392671450L-112.0458131544,-99.7283096946A150,150,0,0,0,-113.7458712717,-97.7848493818Z" stroke="none"></path>
                <path d="M-313.7282768325,-279.2392671450A420,420,0,0,1,-308.8751496448,-284.5982113996L-110.3125534445,-101.6422183570A150,150,0,0,0,-112.0458131544,-99.7283096946Z" stroke="none"></path>
                <path d="M-298.8957813583,-295.0615391510A420,420,0,0,1,-293.7724973616,-300.1628221380L-104.9187490577,-107.2010079064A150,150,0,0,0,-106.7484933422,-105.3791211253Z" stroke="none"></path>
                <path d="M-293.7724973616,-300.1628221380A420,420,0,0,1,-288.5621622339,-305.1751604027L-103.0579150835,-108.9911287152A150,150,0,0,0,-104.9187490577,-107.2010079064Z" stroke="none"></path>
                <path d="M-288.5621622339,-305.1751604027A420,420,0,0,1,-283.2663199098,-310.0970686813L-101.1665428249,-110.7489531004A150,150,0,0,0,-103.0579150835,-108.9911287152Z" stroke="none"></path>
                <path d="M-283.2663199098,-310.0970686813A420,420,0,0,1,-277.8865396617,-314.9270885059L-99.2451927363,-112.4739601806A150,150,0,0,0,-101.1665428249,-110.7489531004Z" stroke="none"></path>
                <path d="M-277.8865396617,-314.9270885059A420,420,0,0,1,-272.4244156346,-319.6637886375L-97.2944341552,-114.1656387991A150,150,0,0,0,-99.2451927363,-112.4739601806Z" stroke="none"></path>
                <path d="M-261.2596343451,-328.8516435443A420,420,0,0,1,-255.5602854483,-333.3000757599L-91.2715305172,-119.0357413428A150,150,0,0,0,-93.3070122661,-117.4470155515Z" stroke="none"></path>
                <path d="M-255.5602854483,-333.3000757599A420,420,0,0,1,-249.7852085235,-337.6497439697L-89.2090030441,-120.5891942749A150,150,0,0,0,-91.2715305172,-119.0357413428Z" stroke="none"></path>
                <path d="M-249.7852085235,-337.6497439697A420,420,0,0,1,-243.9361148505,-341.8993592734L-87.1200410180,-122.1069140262A150,150,0,0,0,-89.2090030441,-120.5891942749Z" stroke="none"></path>
                <path d="M-243.9361148505,-341.8993592734A420,420,0,0,1,-238.0147376422,-346.0476624181L-85.0052634436,-123.5884508636A150,150,0,0,0,-87.1200410180,-122.1069140262Z" stroke="none"></path>
                <path d="M-238.0147376422,-346.0476624181A420,420,0,0,1,-232.0228315304,-350.0934241721L-82.8652969751,-125.0333657757A150,150,0,0,0,-85.0052634436,-123.5884508636Z" stroke="none"></path>
                <path d="M-219.8345550935,-357.8725588625A420,420,0,0,1,-213.6417964178,-361.6036266733L-76.3006415778,-129.1441523833A150,150,0,0,0,-78.5123411048,-127.8116281651Z" stroke="none"></path>
                <path d="M-213.6417964178,-361.6036266733A420,420,0,0,1,-207.3857310671,-365.2275435255L-74.0663325239,-130.4384084019A150,150,0,0,0,-76.3006415778,-129.1441523833Z" stroke="none"></path>
                <path d="M-207.3857310671,-365.2275435255A420,420,0,0,1,-201.0682128486,-368.7432355743L-71.8100760173,-131.6940127051A150,150,0,0,0,-74.0663325239,-130.4384084019Z" stroke="none"></path>
                <path d="M-201.0682128486,-368.7432355743A420,420,0,0,1,-194.6911137791,-372.1496610443L-69.5325406354,-132.9105932301A150,150,0,0,0,-71.8100760173,-131.6940127051Z" stroke="none"></path>
                <path d="M-194.6911137791,-372.1496610443A420,420,0,0,1,-188.2563235309,-375.4458105380L-67.2344012610,-134.0877894778A150,150,0,0,0,-69.5325406354,-132.9105932301Z" stroke="none"></path>
                <path d="M-175.2213130971,-381.7034076825A420,420,0,0,1,-168.6249554665,-384.6630010722L-60.2231983808,-137.3796432400A150,150,0,0,0,-62.5790403918,-136.3226456009Z" stroke="none"></path>
                <path d="M-168.6249554665,-384.6630010722A420,420,0,0,1,-161.9786306223,-387.5086105130L-57.8495109365,-138.3959323260A150,150,0,0,0,-60.2231983808,-137.3796432400Z" stroke="none"></path>
                <path d="M-161.9786306223,-387.5086105130A420,420,0,0,1,-155.2843080140,-390.2393927893L-55.4586814336,-139.3712117104A150,150,0,0,0,-57.8495109365,-138.3959323260Z" stroke="none"></path>
                <path d="M-155.2843080140,-390.2393927893A420,420,0,0,1,-148.5439713140,-392.8545387115L-53.0514183264,-140.3051923969A150,150,0,0,0,-55.4586814336,-139.3712117104Z" stroke="none"></path>
                <path d="M-148.5439713140,-392.8545387115A420,420,0,0,1,-141.7596178295,-395.3532733553L-50.6284349391,-141.1975976269A150,150,0,0,0,-53.0514183264,-140.3051923969Z" stroke="none"></path>
                <path d="M-128.0669143556,-399.9985818067A420,420,0,0,1,-121.1626218098,-402.1437791091L-43.2723649320,-143.6227782532A150,150,0,0,0,-45.7381836984,-142.8566363595Z" stroke="none"></path>
                <path d="M-121.1626218098,-402.1437791091A420,420,0,0,1,-114.2224261643,-404.1698125307L-40.7937236301,-144.3463616181A150,150,0,0,0,-43.2723649320,-143.6227782532Z" stroke="none"></path>
                <path d="M-114.2224261643,-404.1698125307A420,420,0,0,1,-107.2483839487,-406.0760817142L-38.3029942674,-145.0271720407A150,150,0,0,0,-40.7937236301,-144.3463616181Z" stroke="none"></path>
                <path d="M-107.2483839487,-406.0760817142A420,420,0,0,1,-100.2425617224,-407.8620217908L-35.8009149008,-145.6650077824A150,150,0,0,0,-38.3029942674,-145.0271720407Z" stroke="none"></path>
                <path d="M-100.2425617224,-407.8620217908A420,420,0,0,1,-93.2070354617,-409.5271035480L-33.2882269506,-146.2596798385A150,150,0,0,0,-35.8009149008,-145.6650077824Z" stroke="none"></path>
                <path d="M-79.0552181341,-412.4927544645A420,420,0,0,1,-71.9431205562,-413.7924448375L-25.6939716272,-147.7830160134A150,150,0,0,0,-28.2340064764,-147.3188408802Z" stroke="none"></path>
                <path d="M-71.9431205562,-413.7924448375A420,420,0,0,1,-64.8097046789,-414.9695195787L-23.1463230996,-148.2033998495A150,150,0,0,0,-25.6939716272,-147.7830160134Z" stroke="none"></path>
                <path d="M-64.8097046789,-414.9695195787A420,420,0,0,1,-57.6570842875,-416.0236298955L-20.5918158169,-148.5798678198A150,150,0,0,0,-23.1463230996,-148.2033998495Z" stroke="none"></path>
                <path d="M-57.6570842875,-416.0236298955A420,420,0,0,1,-50.4873788577,-416.9544634322L-18.0312067349,-148.9123083686A150,150,0,0,0,-20.5918158169,-148.5798678198Z" stroke="none"></path>
                <path d="M-50.4873788577,-416.9544634322A420,420,0,0,1,-43.3027129279,-417.7617443628L-15.4652546171,-149.2006229867A150,150,0,0,0,-18.0312067349,-148.9123083686Z" stroke="none"></path>
            </clipPath>
            <path class="remainder" d="M-419.6850047206,-16.2633579747A420,420,0,0,1,-36.1052154697,-418.4452334725L-12.8947198106,-149.4447262401A150,150,0,0,0,-149.8875016859,-5.8083421338Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M-419.6850047206,-16.2633579747A420,420,0,0,1,-36.1052154697,-418.4452334725L-12.8947198106,-149.4447262401A150,150,0,0,0,-149.8875016859,-5.8083421338Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.0909090909" style="font-size: 60px" opacity="0.9" fill="black">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainderLabel > last day of Q1 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="-391.5" y="13.5" style="font-size: 40.9090909090px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > last day of Q2 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="-391.5" y="13.5" style="font-size: 40.9090909090px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > last day of Q3 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="171" y="13.5" style="font-size: 40.9090909090px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > last day of Q4 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="171" y="13.5" style="font-size: 40.9090909090px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > start of Q1 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="-391.5" y="13.5" style="font-size: 40.9090909090px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > start of Q2 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="-391.5" y="13.5" style="font-size: 40.9090909090px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > start of Q3 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="171" y="13.5" style="font-size: 40.9090909090px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > start of Q4 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="171" y="13.5" style="font-size: 40.9090909090px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;
